<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tinfoil-SMS</string>
    <string name="vibration_default_length">500</string>
    <string name="contact_name">name</string>
    
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="tell_me_more">Tell Me More</string>
    <string name="save">Save</string>
    
    <string name="key_exchange_failed_to_decrypt">FAILED TO DECRYPT</string>
    <string name="possible_man_in_the_middle_attack_warning">Possible Man In The Middle Attack</string>
    <string name="key_exchange_received">Exchange Key Message Received</string>
    
    <!-- ConversationView Activity strings -->
    <string name="add_contacts_list">Add Contact</string>
    <string name="import_contacts_list">Import Contact</string>

    <!-- KeyExchangeManager Activity strings -->
    <string name="key_exchange_manager">Key Exchange Manager</string>
    <string name="empty_key_exchange_list">No Pending Key Echanges</string>
    <string name="key_exchange_error_title">Key Exchange Warning!</string>
    <string name="key_exchange_error_message_1">The Key Exchange with</string>
    <string name="key_exchange_error_message_2">was unsuccessful. This is a potential man-in-the-middle attack.\nPlease ensure your shared secrets are correct</string>
    <string name="key_exchange_info_url">https://github.com/tinfoilhat/tinfoil-sms/wiki/Tinfoil-SMS-Introductory-Walkthrough#receiving-key-exchanges</string>
    <string name="invalid_secrets">Invalid Secrets</string>
	<string name="shared_secret_hint_1">Shared Secret 1</string>
	<string name="shared_secret_hint_2">Shared Secret 2</string>
	
	
	<string name="set_shared_secrets">Set the shared secret for</string>
	<string name="set_shared_secrets_title">Key Exchange</string>

    <!-- Settings strings -->
    <string name="settings">Settings</string>

    <!-- activity_key_exchange_manager strings -->
    <string name="reject_button">Reject</string>
    <string name="user_key_settings">User Key Settings</string>
    <string name="exchange_button">Exchange</string>

    <!-- AddContact strings -->
    <string name="add_contact_activity">Edit Contact</string>
    <string name="number">Number</string>
    <string name="add_number">Add Number</string>
    <string name="phone_type_title">Phone Type:</string>
    <string name="insufficent_message">Insufficient information provided</string>

    <!-- ManageContactsActivity strings -->
    <string name="exchange_keys">Exchange Keys</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="untrust_button_name">Untrust</string>
    <string name="empty_list_value">Empty list</string>
    <string name="empty_loader_value">No Contacts</string>
    <string name="empty_loader_trusted_value">No Trusted Contacts</string>

    <!-- EditNumber strings -->
    <string name="shared_secret_1">Secret message</string>
    <string name="shared_secret_2">Secret message</string>
    <string name="book_path_text">Book Path</string>
    <string name="book_path">default</string>
    <string name="book_inverse_text">Book Inverse Path</string>
    <string name="book_inverse">default</string>
    <string name="contact_public_key">Contact\'s Public Key</string>
    <string name="public_key">Public Key</string>
    <string name="key_exchange_settings">Key Exchange Settings</string>
    <string name="auto_key_exchange">Automatically Exchange</string>
    <string name="manual_key_exchange">Manual Exchange</string>
    <string name="ignore_key_exchange">Ignore All Exchange</string>
    <string name="edit_number">Edit Number</string>

    <!-- Shared between EditNumber and -->
    <string name="phone_text">Phone Number</string>

    <!-- ImportContacts strings -->
    <string name="import_contacts">Import Contacts</string>
    <string name="searching_title">Searching</string>
    <string name="searching_message">Locating Contacts&#8230;</string>
    <string name="importing_title">Importing</string>
    <string name="importing_message">Saving Contacts&#8230;</string>
    <string name="empty_import_list">No Contacts to Import</string>

    <!-- MessageView strings -->
    <string name="message">Messages</string>
    <string name="forward_title">Input contact number</string>
    <string name="forward_positive_button">OK</string>
    <string name="invalid_number_message">Invalid number</string>
    <string name="untrust_contact_menu_full">Untrust Contact</string>
    <string name="untrust_contact_menu_short">Untrust</string>
    <string name="resolve_key_exchange_full">Resolve Key Exchange</string>
    <string name="resolve_key_exchange_short">Resolve</string>
    <string name="exchange_key_full">Exchange Keys</string>
    <string name="exchange_key_short">Exchange Keys</string>
    <string-array name="sms_options">
        <item>Delete message</item>
        <item>Copy message</item>
        <item>Forward message</item>
    </string-array>
    <string name="key_exchange_dialog_message">Would you like to exchange keys with</string>
    <string name="key_exchange_dialog_pos_button">OK</string>
    <string name="key_exchange_dialog_neg_button">No</string>
    <string name="shared_secret">Shared secrets must be longer then</string>
    <string name="export_number_title">Input contact\'s number</string>
    <string name="key_exchange_import">Key Exchange Import</string>
    <string name="key_exchange_respond">Would you like to export or send via SMS the exchange keys for</string>
    <string name="sms_option">SMS</string>
    <string name="export_option">Export</string>

    <!-- Shared between MessageView and SendMessageActivity strings -->
    <string name="send">Send</string>

    <!-- SendMessageActivity strings -->
    <string name="to">To</string>
    <string name="send_message">Send Message</string>
    <string name="insufficent_information_provided">You have failed to provide sufficient information</string>

    <!-- DeleteContacts strings -->
    <string name="delete_contacts">Delete Contacts</string>
    
    <!-- SMSUtility strings -->
    <string name="encrypted_message_sent">Encrypted Message sent</string>
    <string name="message_sent">Message sent</string>
    <string name="failed_to_encrypt">FAILED TO ENCRYPT</string>
    <string name="failed_to_sent">FAILED TO SEND</string>
    
    <!-- Tabbed activity -->
    <string name="contacts_tab">Contacts</string>
    <string name="trusted_contact_tab">Trusted Contacts</string>
    <string name="pending_key_exchange_tab">Pending Key exchanges</string>

    <!-- UserKeySettings strings -->
    <string name="user_public_key">Your Public Key:</string>
    <string name="export_public_key">Export Public Key</string>
    <string name="import_contacts_title">Input contact\'s number</string>
    <string name="written_path">Written to your sd card under</string>
    
    <!-- Exchange Key -->
    <string name="unsuccessful_key_exchanges">Not all numers could exchange, they must have shared secrets</string>
    <string name="key_exchange_cancelled">Key Exchange Cancelled</string>
    
    <!-- KeyExchangeHandler strings -->
    <string name="key_exchange_double_message">initiated a key exchange after you initiated one. This is a potential man-in-the-middle attack. Would you like to exchange keys anyways?</string>
    <string name="key_exchange_double_title">Key Exchange Warning!</string>

    <!-- Application crash reporting -->
    <string name="pref_enable_bugsense">Enable Bugsense</string>
    <string name="pref_bugsense_enabled">Disable bug reporting</string>
    <string name="pref_bugsense_disabled">Enable bug reporting</string>
    <string name="title_activity_tab_selection">Manage Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="title_activity_donations">Donate</string>
	
    <!-- The Donation strings -->
    <string name="donate">Donate</string>
    <string name="donate_dialog_message">Would you like to donate to Tinfoil-SMS?</string>
    <string name="flattr_option">Flattr</string>
    <string name="paypal_option">PayPal</string>
    
    <!-- Urls -->
    <string name="paypal_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=QZP8ZHVFATTTY</string>
    <string name="flattr_url">http://flattr.com/thing/1807230/Tinfoil-SMS-Texting-for-the-Paranoid</string>
    
    <!-- Settings string keys -->
    <string name="show_encrypt_settings">show_encrypt</string>
    <string name="enable_settings">enable</string>
    <string name="native_save_settings">native_save</string>
    <string name="message_limit_settings">message_limit</string>
    <string name="notification_bar_settings">notification_bar</string>
    <string name="vibrate_settings">vibrate</string>
    <string name="vibrate_length_settings">vibrate_length</string>
    <string name="bugsense_enable_settings">bugsense_enable</string>
    
    <!-- Notification strings -->
    <string name="new_message_notification_title">New Messages</string>
    <string name="unread_email_message">unread messages</string>
    <string name="pending_key_exchange_notification">Pending Key Exchanges</string>
    <string name="pending_key_exchange_message">Click here to resolve</string>
    
</resources>