<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
        android:title="Application Settings"
        android:key="application_category">
        
        <CheckBoxPreference 
            android:key="@string/enable_settings"
            android:summary="Enable or disable SMS encryption"
            android:title="Enable Tinfoil-SMS" 
            android:defaultValue="true"
            android:persistent="true" />
                   
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="message_category" 
        android:title="Message Settings">
        
        <CheckBoxPreference 
            android:title="Native Save" 
            android:key="@string/native_save_settings" 
            android:summary="Save messages to the native SMS app"
            android:defaultValue="false"
            android:persistent="true" />
       
        <EditTextPreference 
            android:title="Message Limit"
            android:key="@string/message_limit_settings" 
           	android:inputType="number"
            android:summary="Maximum number of messages saved for contacts" 
            android:persistent="true"
            android:defaultValue="50" />
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:key="contact_category"
        android:title="Contact Settings">
        
        <PreferenceScreen 
	        android:title="Import Contacts"
	        android:key="import_contacts"
	        android:summary="Import Trusted Contacts from phone">
                <intent
             		android:action="android.intent.action.VIEW"
             		android:targetPackage="com.tinfoil.sms"
             		android:targetClass="com.tinfoil.sms.settings.ImportContacts" />
        
    	</PreferenceScreen>
   		<PreferenceScreen
			android:title="Manage Contacts"
			android:key="manage_contacts">
			<intent
				android:action="android.intent.action.VIEW"
				android:targetPackage="com.tinfoil.sms"
				android:targetClass="com.tinfoil.sms.settings.TabSelection" />
    	</PreferenceScreen>
	</PreferenceCategory>
	
    <!-- 
	<PreferenceCategory 
    android:key="book_category" 
    android:title="Book Settings">
	    <PreferenceScreen 
	        android:title="Add Book"
	        android:key="add_book" 
	        android:summary="Add a book source to the reference list" android:enabled="false">
        </PreferenceScreen>
		<PreferenceScreen 
		    android:title="Manage Books" 
		    android:key="manage_books" android:enabled="false">
		    
		</PreferenceScreen>
	</PreferenceCategory>
	-->
	<PreferenceCategory 
	    android:key="encryption_category" 
	    android:title="Encryption Settings">
		
		<CheckBoxPreference 
		    android:title="Encrypted Messages" 
		    android:key="@string/show_encrypt_settings"
		    android:summary="Display the original encrypted message"
		    android:defaultValue="false"
		    android:persistent="true" />
		
		<PreferenceScreen 
            android:title="My Public Key" 
            android:key="public_key"
            android:summary="Manage your public key">
			
			<intent
             		android:action="android.intent.action.VIEW"
             		android:targetPackage="com.tinfoil.sms"
             		android:targetClass="com.tinfoil.sms.settings.UserKeySettings" />
        </PreferenceScreen>
	</PreferenceCategory>
    
    <PreferenceCategory 
        android:key="notification_category" 
        android:title="Notification Settings">
        <CheckBoxPreference 
            android:title="Enable Notifications" 
            android:key="@string/notification_bar_settings"
            android:defaultValue="true"
            android:persistent="true"/>
        <CheckBoxPreference 
            android:title="Vibrate" 
            android:key="@string/vibrate_settings"
            android:defaultValue="true"
            android:persistent="true"/>
        <EditTextPreference 
            android:key="@string/vibrate_length_settings"
            android:title="Vibrate Length" 
            android:summary="Select the length of vibration notification" 
            android:defaultValue="500"
            android:persistent="true"
            android:inputType="number" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="Feedback"
        android:key="feedback_category">
        
        <CheckBoxPreference
            android:key="@string/bugsense_enable_settings"
		    android:title="@string/pref_enable_bugsense"
		    android:summaryOn="@string/pref_bugsense_enabled"
		    android:summaryOff="@string/pref_bugsense_disabled"
		    android:defaultValue="true"
		    android:persistent="true"/>
        
          <PreferenceScreen
           	android:title="@string/source_code_title"
            android:key="source_code"
            android:summary="@string/source_code_sub_title">	
          </PreferenceScreen>
          
          
          <PreferenceScreen 
            android:title="Donate"
            android:key="donate"
            android:summary="Support the developers">
			
			<intent
				android:action="android.intent.action.VIEW"
				android:targetPackage="com.tinfoil.sms"
				android:targetClass="com.tinfoil.sms.settings.DonationsActivity" />	
        </PreferenceScreen>
            
	</PreferenceCategory>
    
	
</PreferenceScreen>