<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="10dp" >
    
    <EditText
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:hint="@string/contact_name"
        android:inputType="textCapWords">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contact_name"
        android:layout_below="@+id/contact_name"
        android:layout_marginTop="16dp"
        android:text="@string/number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/contact_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_back"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/number" >

    </ListView>
   
    <LinearLayout 
        android:id="@id/button_back"
        android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_alignParentBottom="true">
	    
	  <Button
	      android:id="@+id/add_new_number"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:layout_weight="1"
	      android:onClick="addNewNumber"
	      android:text="@string/add_number" />
	  
	  <Button
	      android:id="@+id/add"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:layout_weight="1"
	      android:onClick="saveInformation"
	      android:text="@string/save" />
	</LinearLayout>
    
</RelativeLayout>